# libstrophe

./: .gitignore  CMakeLists.txt
src/: handler.c
